--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -131,6 +131,10 @@
       <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.1.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\OLD COMPANY\PROJECT FINALLY\PHAN MEM QUAN LY TAI SAN\bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="NumberConverterToText">
       <HintPath>..\..\..\..\Sample\NumberConverterToText\NumberConverterToText\NumberConverterToText\bin\Debug\NumberConverterToText.dll</HintPath>
     </Reference>
@@ -174,6 +178,9 @@
   <ItemGroup>
     <Compile Include="ChartDrawing\ChartDrawing.cs" />
     <Compile Include="ChartDrawing\LiveChart.cs" />
+    <Compile Include="ClassMysql\ClassMySqlConnect.cs" />
+    <Compile Include="ClassMysql\MySql_importfg_warehouse.cs" />
+    <Compile Include="ClassMysql\Class_Import_FS_WareHouse.cs" />
     <Compile Include="Class\ClearMemory.cs" />
     <Compile Include="Class\ClearObject.cs" />
     <Compile Include="Class\DateTimeControl.cs" />
@@ -1250,6 +1257,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Content Include="MySql.Data.dll" />
     <Content Include="Resources\AttendanceDaily.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -1492,6 +1500,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ClassObject\" />
     <Folder Include="CrisisReport\Shipping\" />
     <Folder Include="MQC\Model\" />
     <Folder Include="MQC\Report\" />
