--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -177,6 +177,9 @@
     <Compile Include="ChartDrawing\LiveChart.cs" />
     <Compile Include="ClassMysql\ClassMySqlConnect.cs" />
     <Compile Include="ClassMysql\Class_ExportFG_WareHouse.cs" />
+    <Compile Include="ClassMysql\DbMySQLConnect.cs" />
+    <Compile Include="ClassMysql\DBUtilsMySQL.cs" />
+    <Compile Include="ClassMysql\MysqlMES.cs" />
     <Compile Include="ClassMysql\MySql_importfg_warehouse.cs" />
     <Compile Include="ClassMysql\Class_Import_FS_WareHouse.cs" />
     <Compile Include="Class\ClearMemory.cs" />
