--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -27,30 +27,33 @@
   </connectionStrings>
   <userSettings>
     <WindowsFormsApplication1.Properties.Settings>
-      <setting name="intTimerMQC" serializeAs="String">
-        <value>20000</value>
-      </setting>
-      <setting name="intTimerMQCShow" serializeAs="String">
-        <value>5000</value>
-      </setting>
-      <setting name="intTimerMQCChart" serializeAs="String">
-        <value>5000</value>
-      </setting>
-      <setting name="intCounterRefresh" serializeAs="String">
-        <value>20</value>
-      </setting>
-      <setting name="IntLayoutMQCColumn" serializeAs="String">
-        <value>3</value>
-      </setting>
-      <setting name="intLayoutMQCRows" serializeAs="String">
-        <value>2</value>
-      </setting>
-      <setting name="intTimerMQCMaterial" serializeAs="String">
-        <value>5000</value>
-      </setting>
-      <setting name="intTimerOvenShow" serializeAs="String">
-        <value>6000</value>
-      </setting>
+        <setting name="intTimerMQC" serializeAs="String">
+            <value>20000</value>
+        </setting>
+        <setting name="intTimerMQCShow" serializeAs="String">
+            <value>5000</value>
+        </setting>
+        <setting name="intTimerMQCChart" serializeAs="String">
+            <value>5000</value>
+        </setting>
+        <setting name="intCounterRefresh" serializeAs="String">
+            <value>20</value>
+        </setting>
+        <setting name="IntLayoutMQCColumn" serializeAs="String">
+            <value>3</value>
+        </setting>
+        <setting name="intLayoutMQCRows" serializeAs="String">
+            <value>2</value>
+        </setting>
+        <setting name="intTimerMQCMaterial" serializeAs="String">
+            <value>5000</value>
+        </setting>
+        <setting name="intTimerOvenShow" serializeAs="String">
+            <value>6000</value>
+        </setting>
+        <setting name="Doc_No" serializeAs="String">
+            <value>B581</value>
+        </setting>
     </WindowsFormsApplication1.Properties.Settings>
   </userSettings>
 </configuration>
