Add function list view DocNo

--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -610,6 +610,7 @@
     </Compile>
     <Compile Include="MQC\TargetProduction\TargetToDatabase.cs" />
     <Compile Include="NewQRcode\GetImportFG.cs" />
+    <Compile Include="NewQRcode\GetListDocNo.cs" />
     <Compile Include="NewQRcode\IdentifyQR.cs" />
     <Compile Include="NewQRcode\ListToDatatable.cs" />
     <Compile Include="OVEN\Database\GetdataOven.cs" />
