--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -613,6 +613,12 @@
     <Compile Include="NewQRcode\GetListDocNo.cs" />
     <Compile Include="NewQRcode\IdentifyQR.cs" />
     <Compile Include="NewQRcode\ListToDatatable.cs" />
+    <Compile Include="NewQRcode\UI mesage\MessageBoxUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewQRcode\UI mesage\MessageBoxUI.Designer.cs">
+      <DependentUpon>MessageBoxUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="OVEN\Database\GetdataOven.cs" />
     <Compile Include="OVEN\OVENShow.cs">
       <SubType>Form</SubType>
@@ -1096,6 +1102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MQC\TargetProduction\TargetProdution.resx">
       <DependentUpon>TargetProdution.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewQRcode\UI mesage\MessageBoxUI.resx">
+      <DependentUpon>MessageBoxUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OVEN\OVENShow.resx">
       <DependentUpon>OVENShow.cs</DependentUpon>
