--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -613,6 +613,8 @@
     <Compile Include="NewQRcode\GetListDocNo.cs" />
     <Compile Include="NewQRcode\IdentifyQR.cs" />
     <Compile Include="NewQRcode\ListToDatatable.cs" />
+    <Compile Include="NewQRcode\sql_CheckCondition.cs" />
+    <Compile Include="NewQRcode\sql_QueryFromFileSQL.cs" />
     <Compile Include="NewQRcode\UI mesage\ClassMessageBoxUI.cs" />
     <Compile Include="NewQRcode\UI mesage\MessageBoxUI.cs">
       <SubType>Form</SubType>
@@ -1518,6 +1520,7 @@
     <Folder Include="CrisisReport\Shipping\" />
     <Folder Include="MQC\Model\" />
     <Folder Include="MQC\Report\" />
+    <Folder Include="NewQRcode\FileQuerySQL\" />
     <Folder Include="SettingForm\ItemForm\" />
   </ItemGroup>
   <ItemGroup>
