--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -1275,6 +1275,9 @@
     </Compile>
     <Content Include="MySql.Data.dll" />
     <None Include="Resources\20160719024359.jpg" />
+    <Content Include="NewQRcode\FileQuerySQL\Insert import warehouse full confirm or not confirm.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\AttendanceDaily.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -1520,7 +1523,6 @@
     <Folder Include="CrisisReport\Shipping\" />
     <Folder Include="MQC\Model\" />
     <Folder Include="MQC\Report\" />
-    <Folder Include="NewQRcode\FileQuerySQL\" />
     <Folder Include="SettingForm\ItemForm\" />
   </ItemGroup>
   <ItemGroup>
