--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -1275,6 +1275,30 @@
     </Compile>
     <Content Include="MySql.Data.dll" />
     <None Include="Resources\20160719024359.jpg" />
+    <Content Include="NewQRcode\FileQuerySQL\00_no stage_no lot_no location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\01_no stage_no lot_manage location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\02_no stage_manage lot_no location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\03_no stage_manage lot_manage location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\04_manage stage_no lot_no location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\05_manage stage_no lot_manage location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\06_manage stage_manage lot_no location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewQRcode\FileQuerySQL\07_manage stage_manage lot_ manage location.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewQRcode\FileQuerySQL\not_stageManagement_LotManagement.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
